@@ -2,20 +2,18 @@ package com.example.removie.movie.entityMapper;
 
 import com.example.removie.movie.entity.ReleaseDateEntity;
 import com.example.removie.movie.vo.ReleaseDate;
-import org.springframework.stereotype.Component;
-
+import jakarta.annotation.Nonnull;
+import jakarta.validation.constraints.NotNull;
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Component
+
 public class ReleaseDateEntityMapper {
-    public List<ReleaseDateEntity> getReleaseDateEntityByVO(List<ReleaseDate> releaseDateList) {
+    public static @Nonnull List<ReleaseDateEntity> getReleaseDateEntity(@NotNull List<ReleaseDate> releaseDateList) {
         return releaseDateList.stream()
-                .flatMap(releaseDate -> releaseDate.getReleaseDate().stream()
-                        .map(date -> new ReleaseDateEntity(
-                                releaseDate.getMovieCode(),
-                                date
-                        )))
-                .collect(Collectors.toList());
+                .map(releaseDate -> ReleaseDateEntity.builder()
+                        .releaseDate(releaseDate.getReleaseDate())
+                        .movieCode(releaseDate.getMovieCode())
+                        .build()
+                ).toList();
     }
 }
